--- a/index.html
+++ b/index.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
-<html class="sol flora mundo">
+<html lang="en-US" class="mahalo">
 <meta charset="utf-8">
-<meta name="theme-color" content="Gold">
 
-<title lang="es-CO">Mi cuerpo NO quiere tu opinion</title>
+<title>compassion</title>
 
-<meta
-  name="viewport"
-  content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width">
+<meta name="theme-color" content="darkviolet">
+<meta name="color-scheme" content="dark">
+<meta name="description" content="compassion feeling">
 
-<meta
-  name="description"
-  content="Yellow web poster based on stencil seen IRL on a yellow wall in Colombia"
-  lang="en-US">
+<link rel="stylesheet" href="full.css" media=(color)>
+<link rel="stylesheet" href="feel.css" media=all>
 
-<link rel="stylesheet" href="opinion.css">
+<base href="https://webmural.com">
+<body class="vessel">
 
-<body class="cuerpo">
-
-<h1 class="voz" lang="es-CO">
-  Mi cuerpo NO quiere tu opinion
-</h1>
-
-<figure class="spine">
-  <blockquote lang="es-CO" class="quote capo amor">
-    Mi cuerpo <em class="muy">no</em> quiere tu opinión<b class"muy">.</b>
-  </blockquote>
-  <blockquote lang="en-US" class="quote capo amor jugo loco">
-    My body <em class="muy">doesn't</em> want your opinion<b class"muy">.</b>
-  </blockquote>
-</figure>
-
-<footer hidden>
-  Based on foto from Colombia
-</footer>
+<article class="volcano">
+  <h1 class="aloha">compassion</h1>
+  <p class="macaw">
+    <a href="/">com</a>
+    <a href="/mahalo">passion</a>
+  <p class="macaw">
+    <a href="/neptune#lo">compass</a>
+    <a href="/uranus">ion</a>
+  <p class="macaw">
+    <a href="/composure">comp</a>
+    <a href="/cumbra">noissa</a>
+</article>
